# ChangeLog for app-admin/eselect-emacs
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-admin/eselect-emacs/ChangeLog,v 1.31 2007/12/21 08:47:58 ulm Exp $

*eselect-emacs-1.3-r1 (21 Dec 2007)

  21 Dec 2007; Ulrich Mueller <ulm@gentoo.org> +eselect-emacs-1.3-r1.ebuild:
  Move ctags module into its own package. Drop m68k keyword.

*eselect-emacs-1.3 (20 Nov 2007)

  20 Nov 2007; Ulrich Mueller <ulm@gentoo.org> -eselect-emacs-1.2.ebuild,
  +eselect-emacs-1.3.ebuild:
  Version bump, only minor documentation changes. Remove old version.

  25 Aug 2007; Ulrich Mueller <ulm@gentoo.org> -eselect-emacs-0.8-r1.ebuild:
  Remove old version.

*eselect-emacs-1.2 (22 Aug 2007)

  22 Aug 2007; Ulrich Mueller <ulm@gentoo.org> -eselect-emacs-1.0.ebuild,
  +eselect-emacs-1.2.ebuild:
  Version bump; improves behaviour on FreeBSD where /usr/bin/ctags is a real
  binary. Thanks to Joe Peterson <lavajoe@gentoo.org> for pointing this out.

  13 Aug 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  eselect-emacs-1.1.ebuild:
  ppc. stable

  01 Aug 2007; <metalgod@gentoo.org> eselect-emacs-1.1.ebuild:
  Stable on amd64. See bug #187057.

  30 Jul 2007; Jeroen Roovers <jer@gentoo.org> eselect-emacs-1.1.ebuild:
  Stable for HPPA (bug #187057).

  30 Jul 2007; Raúl Porcel <armin76@gentoo.org> eselect-emacs-1.1.ebuild:
  alpha/ia64 stable wrt #187057

  30 Jul 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  eselect-emacs-1.1.ebuild:
  Stable on sparc wrt #187057

  30 Jul 2007; Markus Rothe <corsair@gentoo.org> eselect-emacs-1.1.ebuild:
  Stable on ppc64; bug #187057

  30 Jul 2007; Christian Faulhammer <opfer@gentoo.org>
  eselect-emacs-1.1.ebuild:
  stable x86, bug 187057

*eselect-emacs-1.1 (29 Jun 2007)

  29 Jun 2007; Ulrich Mueller <ulm@gentoo.org> +eselect-emacs-1.1.ebuild:
  Version bump, new eselect module for ctags. Bug #29398.

*eselect-emacs-1.0 (17 Jun 2007)
