@@ -1,6 +1,12 @@
 # ChangeLog for app-admin/eselect-emacs
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/eselect-emacs/ChangeLog,v 1.31 2007/12/21 08:47:58 ulm Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-admin/eselect-emacs/ChangeLog,v 1.32 2008/01/09 15:47:16 ulm Exp $
+
+*eselect-emacs-1.3-r2 (09 Jan 2008)
+
+  09 Jan 2008; Ulrich Mueller <ulm@gentoo.org> +files/emacs-updater,
+  -eselect-emacs-1.3-r1.ebuild, +eselect-emacs-1.3-r2.ebuild:
+  Install emacs-updater shell script. Remove intermediate revision.
 
 *eselect-emacs-1.3-r1 (21 Dec 2007)
 
